# InsurancePredictor

./: .gitignore  IMPLEMENTATION_PLAN.md  LICENSE  README.md  analysis_model.ipynb  app.py  best_model.pkl  design-philosophy.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt  scaler.pkl  tech-spec.md  train_model.py
.github/workflows/: ci-cd.yml  deploy-frontend.yml
api/: main.py
api/schemas/: request_models.py
config/: config.yaml
docker/: Dockerfile.api
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: PredictionForm.tsx  ResultCard.tsx
frontend/src/lib/: api.ts  types.ts
models/artifacts/: config.pkl  imputer.pkl  label_encoder_region.pkl  scaler.pkl
models/trained/: best_model.pkl
src/data/: preprocessing.py  validation.py
src/features/: engineering.py
src/models/: evaluation.py  interpretability.py  training.py
src/monitoring/: __init__.py  mlflow_tracking.py
tests/integration/: test_api.py
tests/unit/: test_preprocessing.py
